[package]
name = "site"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
edition = "2018"
include = ["src/**/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Same as Tera fork, for date parsing
chrono = {version = "0.4.23", optional = true, default-features = false, features = ["std", "clock"]}
chrono-tz = {version = "0.8", optional = true}
chrono-english = "0.1.7"

errors = { path = "../errors" }
config = { path = "../config" }
console = { path = "../console" }
utils = { path = "../utils" }
templates = { path = "../templates" }
search = { path = "../search" }
imageproc = { path = "../imageproc" }
link_checker = { path = "../link_checker" }
libs = { path = "../libs" }
content = { path = "../content" }

[dev-dependencies]
tempfile = "3"
path-slash = "0.2"
